--- a/T-Shirt.html
+++ b/T-Shirt.html
@@ -12,7 +12,7 @@
     <div class="gora">
     <img src="podpis.png" alt="podpis" class="podpis">
     <nav>
-      <a href="StronaGłowna.html">Home</a>
+      <a href="index.html">Home</a>
       <div class="dropdown">
         <a href="#">Shop</a>
         <div class="dropdown-content">
