--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <button onclick="zmienTekst()">Tłumaczenie</button>
       </div>
     <div class="info-section-photo">
-      <img src="TaylorS.png">
+      <img src="TaylorS.png" alt="TaylorS">
     </div>
   </section>
 
