--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="gora">
     <img src="podpis.png" alt="podpis" class="podpis">
     <nav>
-      <a href="index.html">Home</a>
+      <a href="StronaGłowna.html">Home</a>
       <div class="dropdown">
         <a href="#">Shop</a>
         <div class="dropdown-content">
@@ -33,12 +33,13 @@
 
   <section class="info-sections">
     <div class="info-section">
-      <h3 id="tekst">
+      <div id="tekst">
+      <h3>
         <span class="stary-tytul">Hi, my name is Taylor Swift.</span>
         <span class="nowy-tytul" style="display: none;">Cześć, nazywam się Taylor Swift.</span>
 
       </h3>
-      <p id="tekst">
+      <p>
         <span class="stary-tekst">"I look back at the road I've traveled, and it feels like flipping through the pages of a well-worn diary. Each chapter holds its own story, its own melody, and its own piece of my heart. From the first strum of a guitar in my childhood bedroom to the glittering stages of sold-out arenas, my life has been a whirlwind of melodies and emotions.
 
           There were moments when the world felt too big, too daunting, but those moments were eclipsed by the magic of music. It became my refuge, my sanctuary, a canvas where I painted my joys, my fears, my hopes, and my vulnerabilities.
@@ -70,6 +71,7 @@
           
           Kiedy tu stoję i rozmyślam o tym kalejdoskopie chwil, zdaję sobie sprawę, że moja historia jeszcze się nie skończyła. Jest więcej melodii do skomponowania, więcej historii do rozwikłania i więcej serc do poruszenia. Droga przed nami błyszczy obietnicą nowych przygód, nowych piosenek i nowych rozdziałów czekających na napisanie.”</span>
       </p>
+      </div>
       <button onclick="zmienTekst()">Tłumaczenie</button>
       </div>
     <div class="info-section-photo">
