--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <div class="dropdown">
         <a href="#">Shop</a>
         <div class="dropdown-content">
-          <li class="ShopMenu"><a href="Sklep.html">Music </a></li>
-          <li class="ShopMenu"><a href="T-Shirt.html">T-Shirt</a></li>
+          <li><a href="Sklep.html">Music </a></li>
+          <li><a href="T-Shirt.html">T-Shirt</a></li>
         </div>
       </div>
       <a href="wydaarzenia.html">Cocerts</a>
